# developer-bootcamp-2024

./: .gitignore
Pump-fun/: readme.txt
project-1-favorites/programs/favorites/: Cargo.toml
project-1-favorites/programs/favorites/src/: lib.rs
project-10-lending/: Anchor.toml  package.json
project-10-lending/programs/lending/: Cargo.toml  Cargo.toml_bak
project-10-lending/programs/lending/src/: error.rs  lib.rs  state.rs
project-10-lending/programs/lending/src/instructions/: borrow.rs  deposit.rs  liquidate.rs  repay.rs  withdraw.rs
project-10-lending/test/: Anchor.toml_bak  Cargo.lock_bak
project-10-lending/tests/: bankrun.spec.ts
project-11-programmable-money/program/programs/stablecoin/src/: constants.rs  error.rs  lib.rs  state.rs
project-2-voting/anchor/: Anchor.toml  package.json
project-2-voting/anchor/programs/voting/: Cargo.toml
project-2-voting/anchor/programs/voting/src/: lib.rs
project-2-voting/anchor/tests/: bankrun.spec.ts  basic.spec.ts
project-3-blinks/anchor/programs/voting/src/: lib.rs
project-4-crud-app/anchor/programs/journal/: Cargo.toml
project-4-crud-app/anchor/programs/journal/src/: lib.rs
project-5-tokens/: ata.js  create-token-metadata.ts  create-token-mint.ts  getBase58.js  getTransaction.js  minYurXwc6ghWsZpabot8EnDSmG7K7QqnRjod9mDeEG.json  package.json  readme.txt  sample-token-metadata.json  tescD95ij1c27G7mDHXzN8wY3M6AuzN7nv6F5u813RV.json
project-6-nfts/: create-collection.ts  create-nft.ts  nft-collection-offchain-data.json  nft-offchain-data.json  package.json  readme.txt  spl-token-2022-metadata.ts  tsconfig.json  verify-nft.ts
project-7-swap/: ANALYSIS.md
project-7-swap/programs/swap/: Cargo.toml
project-7-swap/programs/swap/src/: lib.rs
project-7-swap/programs/swap/src/instructions/: make_offer.rs  shared.rs  take_offer.rs
project-8-token-vesting/anchor/: package.json  tsconfig.json
project-8-token-vesting/anchor/programs/vesting/src/: lib.rs
project-9-token-lottery/: Anchor.toml  tsconfig.json
project-9-token-lottery/programs/token-lottery/: Cargo.toml  readme.txt
project-9-token-lottery/programs/token-lottery/src/: lib.rs
project-9-token-lottery/setup/: readme.txt  start-validator1.sh
project-9-token-lottery/tests/: token-lottery.ts
solar-developers-open-course-amm/: package.json  readme.txt
solar-developers-open-course-amm/programs/amm/: Cargo.toml
solar-developers-open-course-amm/programs/amm/src/: lib.rs  state.rs
solar-developers-open-course-amm/programs/amm/src/context/: deposit.rs  initialize.rs
solar-developers-open-course-amm/tests/: amm.ts
(+5 files in other folders)
