[package]
name = "lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
#cargo add borsh-derive@=1.5.1
borsh-derive = "=1.5.7"
#proc-macro2 = "=1.0.95"
#borsh-derive = "=1.5.7"
pyth-sdk-solana = "=0.10.1"
pyth-solana-receiver-sdk = "=0.3.1"
#不增加这这个会编译失败 因为会自动找最新的版本 导致会依赖最新的solana-program@2.3.0 然后编译错误
#cargo add pythnet-sdk@=2.1.0
#pythnet-sdk = "=2.1.0"
pythnet-sdk = "=2.3.0"
#cargo add solana-program@=1.18.26
solana-program = "=1.18.26"
#cargo add spl-tlv-account-resolution@=0.6.5
spl-tlv-account-resolution = "=0.6.5"
#查看依赖的版本
#cargo tree -p solana-program@2.3.0 -i

# Cargo.toml