[package]
name = "token-lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="0.30.1", features=["init-if-needed"]}
anchor-spl = { version="0.30.1", features=["metadata"]}
# 需要指定这个版本否则编译失败
# cargo add backtrace@=0.3.74
backtrace = "=0.3.74"
mpl-token-metadata = "4.1.2"
solana-program = "=1.18.26"
# cargo add switchboard-on-demand@=0.1.13
switchboard-on-demand = "=0.1.13"

# 需要指定这个版本否则编译失败
# cargo add switchboard-common@=0.11.3
[dependencies.switchboard-common]
version = "=0.11.3"
features = []

# 暂时可能没用到
# cargo update -p backtrace --precise 0.3.68
# 我在 Cargo.toml 中设置