[package]
name = "journal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "journal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
#这个版本IDE 可以正常跳转显示代码 但是编译器 anchor build 老版本编译器可能编译失败
#anchor-lang = "0.31"
#这个版本可以正常编译并且正常引用 solana-program 1.18.26版本库
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
# cargo add solana-program@=1.18.26
solana-program = "=1.18.26"
